--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -1542,81 +1542,44 @@
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="afV-ft-PNO">
                                                                         <rect key="frame" x="0.0" y="128" width="128" height="46"/>
                                                                         <subviews>
-                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXF-7Q-U9i">
-                                                                                <rect key="frame" x="5" y="12.999999999999998" width="32" height="20.333333333333329"/>
-                                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXF-7Q-U9i">
+                                                                                <rect key="frame" x="0.0" y="12.999999999999998" width="128" height="20.333333333333329"/>
+                                                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
-                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="foN-e0-48n">
-                                                                                <rect key="frame" x="89.666666666666671" y="0.0" width="38.333333333333329" height="46"/>
-                                                                            </button>
-                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tl7-vO-uHo">
-                                                                                <rect key="frame" x="117.33333333333333" y="5" width="5.6666666666666714" height="36"/>
-                                                                                <subviews>
-                                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WeR-2I-rVS">
-                                                                                        <rect key="frame" x="0.0" y="8.3333333333333428" width="5.666666666666667" height="5.6666666666666679"/>
-                                                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                        <constraints>
-                                                                                            <constraint firstAttribute="width" secondItem="WeR-2I-rVS" secondAttribute="height" multiplier="1:1" id="pA2-rJ-g3e"/>
-                                                                                        </constraints>
-                                                                                    </view>
-                                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARx-Bh-ZYQ">
-                                                                                        <rect key="frame" x="0.0" y="15" width="5.666666666666667" height="6"/>
-                                                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                        <constraints>
-                                                                                            <constraint firstAttribute="width" secondItem="ARx-Bh-ZYQ" secondAttribute="height" multiplier="1:1" id="Ckx-nK-0He"/>
-                                                                                        </constraints>
-                                                                                    </view>
-                                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZLb-Ds-ON2">
-                                                                                        <rect key="frame" x="0.0" y="22" width="5.666666666666667" height="5.6666666666666679"/>
-                                                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                        <constraints>
-                                                                                            <constraint firstAttribute="width" secondItem="ZLb-Ds-ON2" secondAttribute="height" multiplier="1:1" id="NMy-YP-PdG"/>
-                                                                                        </constraints>
-                                                                                    </view>
-                                                                                </subviews>
-                                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                <constraints>
-                                                                                    <constraint firstItem="ARx-Bh-ZYQ" firstAttribute="centerY" secondItem="tl7-vO-uHo" secondAttribute="centerY" id="5MP-eA-is6"/>
-                                                                                    <constraint firstItem="ZLb-Ds-ON2" firstAttribute="width" secondItem="tl7-vO-uHo" secondAttribute="width" id="9rv-ty-mhN"/>
-                                                                                    <constraint firstItem="WeR-2I-rVS" firstAttribute="width" secondItem="tl7-vO-uHo" secondAttribute="width" id="A20-IS-dMC"/>
-                                                                                    <constraint firstItem="ARx-Bh-ZYQ" firstAttribute="centerX" secondItem="tl7-vO-uHo" secondAttribute="centerX" id="Dso-oj-YLB"/>
-                                                                                    <constraint firstItem="ARx-Bh-ZYQ" firstAttribute="top" secondItem="WeR-2I-rVS" secondAttribute="bottom" constant="1" id="HpG-fY-lMe"/>
-                                                                                    <constraint firstItem="ZLb-Ds-ON2" firstAttribute="top" secondItem="ARx-Bh-ZYQ" secondAttribute="bottom" constant="1" id="Tqo-Wm-e0L"/>
-                                                                                    <constraint firstItem="WeR-2I-rVS" firstAttribute="centerX" secondItem="tl7-vO-uHo" secondAttribute="centerX" id="gWL-VW-Y42"/>
-                                                                                    <constraint firstItem="ZLb-Ds-ON2" firstAttribute="centerX" secondItem="tl7-vO-uHo" secondAttribute="centerX" id="vWg-1A-7hL"/>
-                                                                                    <constraint firstItem="ARx-Bh-ZYQ" firstAttribute="width" secondItem="tl7-vO-uHo" secondAttribute="width" id="wEc-Zt-Jk9"/>
-                                                                                </constraints>
-                                                                            </view>
                                                                         </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <constraints>
-                                                                            <constraint firstItem="foN-e0-48n" firstAttribute="width" secondItem="afV-ft-PNO" secondAttribute="width" multiplier="0.3" id="706-Gm-PHK"/>
-                                                                            <constraint firstAttribute="trailing" secondItem="foN-e0-48n" secondAttribute="trailing" id="7gg-bL-ccS"/>
-                                                                            <constraint firstItem="foN-e0-48n" firstAttribute="top" secondItem="afV-ft-PNO" secondAttribute="top" id="DUt-7o-igW"/>
-                                                                            <constraint firstItem="tl7-vO-uHo" firstAttribute="top" secondItem="afV-ft-PNO" secondAttribute="top" constant="5" id="UIM-id-7uc"/>
-                                                                            <constraint firstItem="tl7-vO-uHo" firstAttribute="trailing" secondItem="foN-e0-48n" secondAttribute="trailing" constant="-5" id="VWF-gf-gNX"/>
-                                                                            <constraint firstItem="XXF-7Q-U9i" firstAttribute="leading" secondItem="afV-ft-PNO" secondAttribute="leading" constant="5" id="Wl2-Sk-WjL"/>
-                                                                            <constraint firstAttribute="bottom" secondItem="tl7-vO-uHo" secondAttribute="bottom" constant="5" id="Z0v-2O-IEm"/>
-                                                                            <constraint firstAttribute="bottom" secondItem="foN-e0-48n" secondAttribute="bottom" id="c2K-WH-yii"/>
-                                                                            <constraint firstItem="tl7-vO-uHo" firstAttribute="centerY" secondItem="foN-e0-48n" secondAttribute="centerY" id="qCC-yl-Fxi"/>
+                                                                            <constraint firstItem="XXF-7Q-U9i" firstAttribute="leading" secondItem="afV-ft-PNO" secondAttribute="leading" id="Gym-0g-yRH"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="XXF-7Q-U9i" secondAttribute="trailing" id="Iuk-rO-X3O"/>
                                                                             <constraint firstItem="XXF-7Q-U9i" firstAttribute="centerY" secondItem="afV-ft-PNO" secondAttribute="centerY" id="xnq-cM-0Ub"/>
-                                                                            <constraint firstItem="tl7-vO-uHo" firstAttribute="width" secondItem="foN-e0-48n" secondAttribute="width" multiplier="0.15" id="zVp-eG-Yt9"/>
                                                                         </constraints>
                                                                     </view>
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emq-cz-hcz">
+                                                                        <rect key="frame" x="97.333333333333329" y="97.333333333333329" width="25.666666666666671" height="25.666666666666671"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" secondItem="emq-cz-hcz" secondAttribute="height" multiplier="1:1" id="oSV-fo-cbU"/>
+                                                                        </constraints>
+                                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <state key="normal" image="gearshape" catalog="system"/>
+                                                                    </button>
                                                                 </subviews>
                                                                 <constraints>
+                                                                    <constraint firstItem="emq-cz-hcz" firstAttribute="width" secondItem="t3h-Hy-MTO" secondAttribute="width" multiplier="0.2" id="3gM-Rs-ftS"/>
                                                                     <constraint firstItem="t3h-Hy-MTO" firstAttribute="leading" secondItem="ZHD-GN-e48" secondAttribute="leading" id="B9w-Zm-pkv"/>
                                                                     <constraint firstItem="afV-ft-PNO" firstAttribute="top" secondItem="t3h-Hy-MTO" secondAttribute="bottom" id="Dhw-fD-h3P"/>
                                                                     <constraint firstItem="t3h-Hy-MTO" firstAttribute="top" secondItem="ZHD-GN-e48" secondAttribute="top" id="E7I-IB-Q26"/>
                                                                     <constraint firstAttribute="trailing" secondItem="t3h-Hy-MTO" secondAttribute="trailing" id="Mbc-ap-2Yl"/>
+                                                                    <constraint firstItem="emq-cz-hcz" firstAttribute="bottom" secondItem="t3h-Hy-MTO" secondAttribute="bottom" constant="-5" id="PiP-5E-xtj"/>
+                                                                    <constraint firstItem="emq-cz-hcz" firstAttribute="trailing" secondItem="t3h-Hy-MTO" secondAttribute="trailing" constant="-5" id="Txd-N7-LEY"/>
                                                                     <constraint firstAttribute="bottom" secondItem="afV-ft-PNO" secondAttribute="bottom" id="koD-Bn-PCm"/>
                                                                     <constraint firstAttribute="trailing" secondItem="afV-ft-PNO" secondAttribute="trailing" id="sfc-bL-qvP"/>
                                                                     <constraint firstItem="afV-ft-PNO" firstAttribute="leading" secondItem="ZHD-GN-e48" secondAttribute="leading" id="wJy-Wl-JHx"/>
                                                                 </constraints>
                                                             </collectionViewCellContentView>
                                                             <connections>
+                                                                <outlet property="settingBtn" destination="emq-cz-hcz" id="Oac-s7-ChD"/>
                                                                 <outlet property="spriteImage" destination="t3h-Hy-MTO" id="iuS-wO-Rh6"/>
                                                                 <outlet property="titleLabel" destination="XXF-7Q-U9i" id="WR7-B1-XZX"/>
                                                             </connections>
@@ -1725,6 +1688,7 @@
         <image name="doc.badge.plus" catalog="system" width="119" height="128"/>
         <image name="eye.slash" catalog="system" width="128" height="86"/>
         <image name="gamecontroller.fill" catalog="system" width="128" height="80"/>
+        <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="gearshape.fill" catalog="system" width="128" height="121"/>
         <image name="hammer.fill" catalog="system" width="128" height="117"/>
         <image name="hand.draw.fill" catalog="system" width="128" height="109"/>
